[gd_scene load_steps=30 format=2]

[ext_resource path="res://GUI/GUI Pieces/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://GUI/Audio/confirmation_001.wav" type="AudioStream" id=2]
[ext_resource path="res://Images/SplashLogos/Firebase.png" type="Texture" id=3]
[ext_resource path="res://Images/SplashLogos/Godot.png" type="Texture" id=4]
[ext_resource path="res://GUI/Fonts/Title_Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://GUI/Themes/JABOS.theme" type="Theme" id=6]
[ext_resource path="res://GUI/Fonts/MomcakeBold-WyonA.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Images/Skins/Robot.png" type="Texture" id=8]
[ext_resource path="res://Images/Skins/Cyborg.png" type="Texture" id=9]
[ext_resource path="res://Images/Screenshots/Tag.png" type="Texture" id=10]
[ext_resource path="res://Images/cloud.png" type="Texture" id=12]
[ext_resource path="res://Images/SplashLogos/Eon.png" type="Texture" id=13]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.418719 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="VisualShaderNodeTexture" id=5]
source = 5
texture = SubResource( 4 )

[sub_resource type="VisualShaderNodeTransformVecMult" id=6]
output_port_for_preview = 0
default_input_values = [ 0, Transform( 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0 ), 1, Vector3( 0, 0, 0 ) ]

[sub_resource type="VisualShaderNodeInput" id=7]
input_name = "uv"

[sub_resource type="VisualShaderNodeTextureUniform" id=8]
uniform_name = "TextureUniform"

[sub_resource type="VisualShader" id=2]
code = "shader_type canvas_item;
uniform sampler2D TextureUniform;



void vertex() {
// Output:0

}

void fragment() {
// Input:4
	vec3 n_out4p0 = vec3(UV, 0.0);

// TransformVectorMult:3
	mat4 n_in3p0 = mat4(vec4(0.00000, 1.00000, 0.00000, 0.0), vec4(1.00000, 0.00000, 0.00000, 0.0), vec4(0.00000, 0.00000, 1.00000, 0.0), vec4(0.00000, 0.00000, 0.00000, 1.0));
	vec3 n_out3p0 = (n_in3p0 * vec4(n_out4p0, 1.0)).xyz;

// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 TextureUniform_tex_read = texture(TextureUniform, n_out3p0.xy);
		n_out2p0 = TextureUniform_tex_read.rgb;
		n_out2p1 = TextureUniform_tex_read.a;
	}

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -1031, 185 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 200, 200 )
nodes/fragment/2/node = SubResource( 5 )
nodes/fragment/2/position = Vector2( -260, 200 )
nodes/fragment/3/node = SubResource( 6 )
nodes/fragment/3/position = Vector2( -600, 200 )
nodes/fragment/4/node = SubResource( 7 )
nodes/fragment/4/position = Vector2( -820, 240 )
nodes/fragment/5/node = SubResource( 8 )
nodes/fragment/5/position = Vector2( -740, 380 )
nodes/fragment/connections = PoolIntArray( 4, 0, 3, 1, 3, 0, 2, 0, 2, 0, 0, 0, 5, 2, 2, 2 )

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 0.729412, 0.905882, 0.92549, 1, 0.839216, 0.917647, 0.956863, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 2 )
shader_param/TextureUniform = SubResource( 10 )

[sub_resource type="Animation" id=1]
resource_name = "EonSplash"
length = 5.7
tracks/0/type = "value"
tracks/0/path = NodePath("../SplashLogo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Godot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 4.4, 4.5, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Firebase:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 5, 5.1, 5.5, 5.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../SplashLogo:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../SplashLogo:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.519126, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.858824, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.519126, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.360784, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0, 0.543046, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=21]
size = 24
font_data = ExtResource( 7 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 18 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/EonSplash = SubResource( 1 )
anims/FadeOut = SubResource( 14 )
anims/RESET = SubResource( 13 )

[node name="Particles" type="Node2D" parent="."]

[node name="Clouds" type="CPUParticles2D" parent="Particles"]
position = Vector2( 1056.66, 214 )
amount = 3
lifetime = 25.0
preprocess = 50.0
texture = ExtResource( 12 )
emission_shape = 2
emission_rect_extents = Vector2( 0, 100 )
gravity = Vector2( -5, 0 )
scale_amount = 0.5
color_ramp = SubResource( 15 )

[node name="DistantClouds" type="CPUParticles2D" parent="Particles"]
position = Vector2( 1024, 430.436 )
amount = 3
lifetime = 25.0
preprocess = 50.0
texture = ExtResource( 12 )
emission_shape = 2
emission_rect_extents = Vector2( 0, 100 )
gravity = Vector2( -5, 0 )
scale_amount = 0.25
color_ramp = SubResource( 16 )

[node name="Snow" type="CPUParticles2D" parent="Particles"]
position = Vector2( 617.663, 228.057 )
z_index = 1
amount = 200
lifetime = 5.0
preprocess = 10.0
emission_shape = 2
emission_rect_extents = Vector2( 612, 400 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 24 )
initial_velocity = 100.0
initial_velocity_random = 1.0
scale_amount = 5.0
color_ramp = SubResource( 22 )

[node name="BackSnow" type="CPUParticles2D" parent="Particles"]
position = Vector2( 617.663, 228.057 )
amount = 200
lifetime = 5.0
preprocess = 20.0
emission_shape = 2
emission_rect_extents = Vector2( 612, 400 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 24 )
initial_velocity = 100.0
initial_velocity_random = 1.0
scale_amount = 5.0
color_ramp = SubResource( 22 )

[node name="SplashLogo" type="TextureRect" parent="."]
self_modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Godot" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Firebase" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 512, 300 )
rect_clip_content = true
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TouchScreenButton" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Update" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.380392 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Update"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 12
custom_constants/margin_left = 24
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Update/MarginContainer"]
margin_left = 24.0
margin_top = 12.0
margin_right = 1000.0
margin_bottom = 588.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Update/MarginContainer/VBoxContainer"]
margin_right = 976.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Just A Bunch Of Updates"
align = 1

[node name="HSeparator" type="HSeparator" parent="Update/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 976.0
margin_bottom = 57.0

[node name="HSplitContainer" type="HSplitContainer" parent="Update/MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 976.0
margin_bottom = 569.0
split_offset = 463

[node name="Notes" type="Panel" parent="Update/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 463.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )

[node name="Short" type="VBoxContainer" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Notes"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Notes/Short"]
margin_right = 463.0
margin_bottom = 25.0
text = "Version 0.5 [Beta]"
align = 1

[node name="HSeparator" type="HSeparator" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Notes/Short"]
margin_top = 29.0
margin_right = 463.0
margin_bottom = 29.0

[node name="Body" type="RichTextLabel" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Notes/Short"]
margin_top = 33.0
margin_right = 463.0
margin_bottom = 215.0
bbcode_enabled = true
text = "- NEW GAMEMODE!!!
- Bug Fixes with player collision
- Fixes to the Shop
- Updated Skins:
	Robot
		Cyborg
- Player Collision Fixes"
fit_content_height = true
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Notes/Short"]
margin_top = 219.0
margin_right = 463.0
margin_bottom = 219.0

[node name="Body2" type="RichTextLabel" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Notes/Short"]
margin_top = 223.0
margin_right = 463.0
margin_bottom = 405.0
custom_fonts/normal_font = SubResource( 21 )
text = " ***NEW GAMEMODE***
 - TAG:
	- If you are it, you must tag another player before the time runs out.
	- If the clock hits zero, you are out and a random player is tagged
	- Be the last one standing!"
fit_content_height = true

[node name="Button" type="Button" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Notes"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -53.0
margin_right = -12.0
margin_bottom = -12.0
text = "Awesome!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Images" type="MarginContainer" parent="Update/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 475.0
margin_right = 976.0
margin_bottom = 500.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VSplitContainer" type="VSplitContainer" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Images"]
margin_left = 12.0
margin_top = 12.0
margin_right = 489.0
margin_bottom = 488.0
split_offset = 30

[node name="HSplitContainer" type="HBoxContainer" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Images/VSplitContainer"]
margin_right = 477.0
margin_bottom = 109.0
custom_constants/separation = 39
alignment = 1

[node name="Skin1" type="TextureRect" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Images/VSplitContainer/HSplitContainer"]
margin_left = 140.0
margin_right = 219.0
margin_bottom = 109.0
texture = ExtResource( 9 )
stretch_mode = 6

[node name="Skin2" type="TextureRect" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Images/VSplitContainer/HSplitContainer"]
margin_left = 258.0
margin_right = 337.0
margin_bottom = 109.0
texture = ExtResource( 8 )
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="Update/MarginContainer/VBoxContainer/HSplitContainer/Images/VSplitContainer"]
margin_top = 121.0
margin_right = 477.0
margin_bottom = 476.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[connection signal="animation_finished" from="Background/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
